- Fix : Edit Media regenerate will now reload back same windows - Fix : Not found images will display fileName better now - Fix : Non-image files with another mime (zip, pdf) etc will not generate an error - Fix : Start/EndStamp now used with full MySQL format ( will properly pick up last 24H/ last week etc ) - Fix : Loading Icon will not spin when not visible - Fix : UpdateProgress will now run directly after getting new information, not on next process cycle

--- a/scss/rta-admin-progress.scss
+++ b/scss/rta-admin-progress.scss
@@ -95,12 +95,20 @@ section.regenerate
        //display:none;
        .dashicons {
          animation: wait-spin 2000ms infinite linear;
+         animation-play-state: running;
          width: 35px;
          height: 35px;
          font-size: 35px;
          float: left;
          margin-right: 30px;
 
+       }
+       &.rta_panel_off // don't run when not visible.
+       {
+         .dashicons
+         {
+           animation-play-state: paused;
+         }
        }
     }
     .rta_notices
